spring-boot/src/main/java/com/hotels/example/errors/NoChangesHaveBeenMadeToBooking.java
package com.hotels.example.errors;

public class NoChangesHaveBeenMadeToBooking  extends  RuntimeException{

    public NoChangesHaveBeenMadeToBooking(String message){
        super(message);
    }
}
